# range_aid

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  run.py  setup.py
cmake/: README.md  range_aid_devel_init.py.in
config/: README.md  default.yaml  online.yaml  runtime_surface.yaml
data/: README.md
launch/: README.md  range_aid.launch
launch/include/: README.md  config_launch_eval.py
msg/: CorrectionProposal.msg  README.md  RangeAidStatus.msg  RangeObservation.msg
nodes/: README.md  range_aid_node.py  synthetic_range_source.py
scripts/: README.md  __init__.py  config.py  estimation.py  export_cora_snapshot.py  figures.py  pipeline.py  plot_utils.py  range_aid.py  range_aid_archive.py  range_aid_node.py  reporting.py  run_official_cora.py  run_score_baseline.py  simulation.py  synthetic_range_source.py  video.py
scripts/app/: README.md  __init__.py  pipeline.py
scripts/archive/: README.md  __init__.py  events.py  io.py
scripts/certification/: README.md  __init__.py  external.py  objective_parity.py  pyfg_export.py
scripts/configuration/: README.md  config.py
scripts/estimation/: README.md
scripts/math/: README.md  __init__.py  geometry.py  usbl.py
scripts/models/: README.md  __init__.py  config.py
scripts/optimization/: README.md  __init__.py  common.py  cora.py  full.py  riemann.py  snapshot_sdp_diagnostic.py
scripts/reports/: README.md  __init__.py  summary.py
scripts/sim/: README.md  __init__.py  trajectories.py
scripts/validation/: README.md  validate_estimator_consistency.py  validate_shadow_runtime.py
scripts/viz/: README.md  __init__.py  figures.py  plot_utils.py  video.py
src/range_aid/: __init__.py
src/range_aid/archive/: __init__.py  rebuild.py
src/range_aid/certification/: __init__.py  cora_snapshot.py  pyfg_export.py  snapshot_sdp_diagnostic.py  worker.py
src/range_aid/estimation/: __init__.py  fixed_lag.py  rtabmap.py
src/range_aid/models/: config.py
tests/: test_optimizer_selection.py
tools/: README.md  official_cora_adapter.cpp
