<?xml version="1.0"?>
<package format="2">
  <name>range_aid</name>
  <version>0.1.0</version>
  <description>Shadow-only range-aided pose estimation and certification for GRANDE.</description>

  <maintainer email="aaronjs@g.ucla.edu">Aaron John Sabu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
